// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary with 2 expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
     expenses
     totalling 
    3526.3
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
     expense
     totalling 
    256.35
  </h1>
</div>
`;
